...
            "state" : "translated",
            "value" : "已取消"
          }
        }
      }
    },
    "Calendar" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "日历"
...
            "state" : "translated",
            "value" : "日曆年份"
          }
        }
      }
    },
    "Cancel" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
...
            "state" : "translated",
            "value" : "深色"
          }
        }
      }
    },
    "Dashboard" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "概览"
...
            "state" : "translated",
            "value" : "時長 · %lld 分鐘"
          }
        }
      }
    },
    "Edit" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "编辑"
...
            "state" : "translated",
            "value" : "此檢視中的條目會顯示在這裡。"
          }
        }
      }
    },
    "Journal" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "日记"
...
            "state" : "translated",
            "value" : "Org 原始碼"
          }
        }
      }
    },
    "Org source editor" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Org 源码编辑器"
...
            "state" : "translated",
            "value" : "按住並拖到檢視上，鬆開即可切換"
          }
        }
      }
    },
    "Preview" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "预览"
...
            "state" : "translated",
            "value" : "已安排 · %@"
          }
        }
      }
    },
    "Search" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "搜索"
...
